Issue 24372: menu font icons in dropdown for narrow webparts alignment fix

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3543,6 +3543,11 @@ div.headermenu a.labkey-menu-text-link img {
     right: 2px;
 }
 
+.x4-menu-item-icon.fa
+{
+    margin-top: 0.28em;
+}
+
 .x4-column-header
 {
     border-bottom: 1px solid #AAAAAA !important;
